# goshen-chain

./: .gitignore  Cargo.toml  README.md  build.sh  riscv32ima-unknown-none-elf.json
.github/workflows/: build-test-windows.yml  build-test.yml  build.yml  check.yml  deploy-docker-nightly.yml  deploy-docker-tag.yml  deploy-docker.yml  fmt.yml
brotli-bin/: Cargo.toml
crates/concensus/ethash/: Cargo.toml
crates/crypto/: Cargo.toml
crates/crypto/src/: signature.rs
crates/db/memory-db/: Cargo.toml
crates/db/memory-db/src/: lib.rs
crates/db/patricia-trie-ethereum/: Cargo.toml
crates/db/patricia-trie-ethereum/src/: rlp_node_codec.rs
crates/db/trie-db-0.12.4/src/: node_codec.rs
crates/ethcore/: Cargo.toml
crates/ethcore/benches/: builtin.rs
crates/ethcore/src/: block.rs  executed.rs  executive.rs  externalities.rs  l2_cfg.rs  lib.rs  pod_account.rs  transaction_ext.rs
crates/ethcore/src/client/: mod.rs
crates/ethcore/src/engines/: instant_seal.rs  l2_engine.rs
crates/ethcore/src/ethereum/: ethash.rs
crates/ethcore/src/json_tests/: executive.rs  local.rs  runner.rs
crates/ethcore/src/machine/: impls.rs
crates/ethcore/src/miner/: mod.rs
crates/ethcore/src/spec/: seal.rs  spec.rs
crates/ethcore/src/state/: account.rs  mod.rs  riscv_db.rs
crates/ethcore/src/trace/: executive_tracer.rs  mod.rs
crates/ethcore/src/trace/types/: flat.rs  trace.rs
crates/ethcore/types/: Cargo.toml
crates/ethcore/types/src/: block.rs  encoded.rs  header.rs  l2_cfg.rs  lib.rs  receipt.rs  snapshot_manifest.rs
crates/ethcore/types/src/transaction/: error.rs  transaction.rs
crates/ethcore/types/src/views/: block.rs  body.rs  header.rs  typed_transaction.rs
crates/ethjson/: Cargo.toml
crates/ethjson/src/: bytes.rs  lib.rs
crates/util/EIP-152/: Cargo.toml
crates/util/EIP-152/src/: lib.rs
crates/util/blob/: Cargo.toml
crates/util/blob/src/: lib.rs
crates/util/brotli/: Cargo.toml
crates/util/brotli/src/: heap.rs  lib.rs
crates/util/keccak-hasher/: Cargo.toml
crates/util/macros/src/: lib.rs
crates/util/riscv-evm/: Cargo.toml
crates/util/riscv-evm/docs/: syscall.md
crates/util/riscv-evm/src/: lib.rs  runtime.rs  syscall.rs
crates/util/rlp-compress/: Cargo.toml
crates/util/rlp-derive/: Cargo.toml
crates/util/triehash-0.5.0/: Cargo.toml
crates/util/triehash-ethereum/: Cargo.toml
crates/vm/builtin/: Cargo.toml
crates/vm/builtin/src/: lib.rs
crates/vm/evm/: Cargo.toml
crates/vm/evm/benches/: basic.rs
crates/vm/evm/src/: tests.rs
crates/vm/evm/src/interpreter/: mod.rs
crates/vm/vm/: Cargo.toml
crates/vm/vm/src/: schedule.rs
src/: consts.rs  input.rs  lib.rs  machine.rs  main.rs  riscv_db.rs
