[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = {version = "0.9.2", default-features = false}
keccak-hash = {version = "0.5.0", default-features = false }
hex = { version = "0.4", default-features = false }
parity-crypto = { version = "0.9.0", features = [ "publickey" ], optional = true }
sha2 = {version="0.8.0", default-features = false}
ripemd160= {version="0.8.0", default-features=false}
digest={version="0.8.1",default-features=false}
riscv-evm={path="../../../riscv-evm", default-features=false}

[features]
default = ["std"]
std = ["parity-crypto"]
