[package]
description = "Parity Ethereum JSON Deserialization"
name = "ethjson"
version = "0.1.0"
edition = "2018"
authors = [
  "Gnosis Ltd <openethereum@gnosis.io>",
  "Parity Technologies <admin@parity.io>"
  ]

[dependencies]
common-types = { path = "../ethcore/types", features = ["test-helpers"] }
parity-crypto = { version = "0.9.0", features = [ "publickey" ] }
ethereum-types = "0.13.1"
hex = { version = "0.4", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
macros = { path = "../util/macros" }
maplit = "1.0.2"
