[package]
description = "Parity Ethereum Common Types"
name = "common-types"
version = "0.1.0"
edition = "2018"
authors = [
  "Gnosis Ltd <openethereum@gnosis.io>",
  "Parity Technologies <admin@parity.io>",
]

[dependencies]
ethereum-types = {version = "0.12.1", default-features = false}
keccak-hash = {version="0.8.0",default-features = false}
parity-bytes = {version = "0.1", default-features = false}
crypto = {path = "../../crypto", default-features = false }
rlp = { version = "0.5.1", default-features = false }
rlp_derive = { path = "../../util/rlp-derive" }
unexpected = { path = "../../util/unexpected" }
serde = {version="1.0",default-features=false}
riscv-evm = { path = "../../util/riscv-evm", default-features = false, optional = true }


[dev-dependencies]
hex = { version = "0.4", default-features = false }

[features]
std = ["crypto/std"]
test-helpers = ["std"]
riscv = ["riscv-evm"]
